--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -2,6 +2,14 @@ ru:
   flash:
     controllers:
       web:
+        admin:
+          users:
+            create:
+              error: "При добавлении пользователя возникли ошибки"
+              success: "Пользователь добавлен"
+            update:
+              error: "При обновлении пользователя возникли ошибки"
+              success: "Пользователь обновлен"
         sessions:
           create:
             error: "Неверный адрес электронной почты или пароль"
