--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -3,6 +3,13 @@ ru:
     controllers:
       web:
         admin:
+          pages:
+            create:
+              error: "При добавлении страницы возникли ошибки"
+              success: "Страница добавлена"
+            update:
+              error: "При обновлении страницы возникли ошибки"
+              success: "Страница обновлена"
           users:
             create:
               error: "При добавлении пользователя возникли ошибки"
@@ -13,3 +20,8 @@ ru:
         sessions:
           create:
             error: "Неверный адрес электронной почты или пароль"
+        members:
+          create:
+            error: "Заполните корректно все обязательные поля"
+            success: "Вы зарегистрированы на День программиста. Мы Вам очень рады! Будем держать в курсе подготовки"
+
