--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -3,6 +3,7 @@ ru:
     attributes:
       user:
         name: "Имя"
+        age: "Возраст"
         email: "Адрес эл. почты"
         phone: "Номер телефона"
         company: "Компания"
