--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -3,6 +3,13 @@ ru:
     controllers:
       web:
         admin:
+          news:
+            create:
+              error: "При добавлении новости возникли ошибки"
+              success: "Новость добавлена"
+            update:
+              error: "При обновлении новости возникли ошибки"
+              success: "Новость обновлена"
           pages:
             create:
               error: "При добавлении страницы возникли ошибки"
