add flags excursio, process_personal_data & subscribe to User

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -25,6 +25,10 @@ ru:
         registration: "Регистрация"
       form:
         register: "Я иду!"
+        excursio: "Поеду на экскурсию по ИТ-компаниям"
+        process_personal_data: "Согласен на обработку персональных данных"
+        subscribe: "Интересно получать информацию о крупных ИТ-мероприятиях Ульяновска (Стачка, Улкамп и прочие)"
+
     news:
       index:
         news: "Новости"
