--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,7 +26,7 @@ ru:
       form:
         register: "Я иду!"
         excursio: "Поеду на экскурсию по ИТ-компаниям"
-        process_personal_data: "Согласен на обработку персональных данных"
+        process_personal_data: "Даю согласие на обработку персональных данных"
         subscribe: "Интересно получать информацию о крупных ИТ-мероприятиях Ульяновска (Стачка, Улкамп и прочие)"
 
     news:
