add user delete flash

--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -24,6 +24,8 @@ ru:
             update:
               error: "При обновлении пользователя возникли ошибки"
               success: "Пользователь обновлен"
+            destroy:
+              success: "Пользователь удален"
         sessions:
           create:
             error: "Неверный адрес электронной почты или пароль"
