--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -16,6 +16,7 @@ ru:
         body: "Содержание"
       user:
         name: "Имя"
+        full_name: "ФИО"
         age: "Возраст"
         email: "Адрес эл. почты"
         phone: "Номер телефона"
