--- a/config/locales/admin.ru.yml
+++ b/config/locales/admin.ru.yml
@@ -32,6 +32,7 @@ ru:
           users: "Участники"
           new: "Добавить"
           delete_confirm: "Точно удалить пользователя?"
+          xls: "Скачать список в формате XLSX"
         edit:
           user_edit: "Редактирование пользователя"
         new:
