add export subscribers to timepad maillist

--- a/config/locales/admin.ru.yml
+++ b/config/locales/admin.ru.yml
@@ -33,6 +33,7 @@ ru:
           new: "Добавить"
           delete_confirm: "Точно удалить пользователя?"
           xls: "Скачать список в формате XLSX"
+          refresh_list: "Обновить меню списков"
         edit:
           user_edit: "Редактирование пользователя"
         new:
