--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -17,6 +17,9 @@ ru:
             update:
               error: "При обновлении страницы возникли ошибки"
               success: "Страница обновлена"
+          timepad_items:
+            export:
+              success: "Список экспортирован"
           users:
             create:
               error: "При добавлении пользователя возникли ошибки"
