add notice for blank timepad maillist id

--- a/config/locales/flash.ru.yml
+++ b/config/locales/flash.ru.yml
@@ -20,6 +20,7 @@ ru:
           timepad_items:
             export:
               success: "Список экспортирован"
+              notice: "Выберите список, в который экспортировать подписчиков"
           users:
             create:
               error: "При добавлении пользователя возникли ошибки"
